--- a/src/config/languages.conf
+++ b/src/config/languages.conf
@@ -1,16 +1,24 @@
-py		:= Python
+py		:= python
 c		:= C
 cpp		:= C++
-h		:= C/C++ Header
-hpp		:= C++ Header
-java	:= Java
-pl		:= Prolog
-lisp	:= Lisp
-php		:= PHP
-jsp		:= JSP
-html	:= HTML
-css		:= CSS
-jsp		:= JavaScript
-ts		:= TypeScript
-md		:= Markdown
-txt		:= Plaintext
+h		:= C/C++ header
+hpp		:= C++ header
+vbs		:= vb-script
+bas		:= basic
+java	:= java
+pl		:= perl
+rb		:= ruby
+lisp	:= lisp
+php		:= php
+jsp		:= jsp
+asp		:= asp
+aspx	:= asp.net
+xml		:= xml
+html	:= html
+html	:= html
+css		:= css
+jsp		:= javascript
+ts		:= typescript
+md		:= markdown
+sh		:= shell-script
+txt		:= plaintext
