--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ src/ash/__pycache__
 src/ash/core/__pycache__
 src/ash/formatting/__pycache__
 src/ash/gui/__pycache__
+src/ash/utils/__pycache__
 *.pyc
 *.txt
