--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,10 @@ src/ash/core/__pycache__
 src/ash/formatting/__pycache__
 src/ash/gui/__pycache__
 src/ash/utils/__pycache__
-dist
+dist/*
 ash.egg-info
 *.pyc
 *.txt
 !/requirements.txt
 !/bin/ash
+!/dist/*.tar.gz
