--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-chardet>=3.0.4
-Pygments>=2.3.1
-pyperclip>=1.8.0
-Send2Trash>=1.5.0
-GitPython>=3.1.7
-Cython>=0.29.21
+chardet==3.0.4
+Pygments==2.3.1
+pyperclip==1.8.0
+Send2Trash==1.5.0
+GitPython==3.1.7
+Cython==0.29.21
